--- a/.github/workflows/Build_OP_NanoPi_R2S.yml
+++ b/.github/workflows/Build_OP_NanoPi_R2S.yml
@@ -11,9 +11,9 @@ on:
   release:
     types: [published]
 
-  #push:
-  #  branches: 
-  #    - master
+  push:
+    branches: 
+      - master
 
   #schedule:
   #  - cron: 0 8 * * 5
@@ -83,7 +83,28 @@ jobs:
     #  working-directory: ./openwrt
     #  run: |
     #    git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon-jerrykuku
+    
+    - name: Import external feeds - adguardhome
+      working-directory: ./openwrt
+      run: |
+        git clone https://github.com/rufengsuixing/luci-app-adguardhome.git package/luci-app-adguardhome
+        
+    - name: Import external feeds - openclash
+      working-directory: ./openwrt
+      run: |
+        git clone https://github.com/vernesong/OpenClash.git package/openclash
+          
+    - name: Import external feeds - smartdns
+      working-directory: ./openwrt
+      run: |
+        git clone https://github.com/pymumu/smartdns.git package/smartdns
+        git clone -b lede https://github.com/pymumu/luci-app-smartdns.git package/luci-app-smartdns
 
+    - name: Change Banner
+      working-directory: ./openwrt
+      run: |
+        cp -f ./banner package/base-files/files/etc/banner
+        
     - name: Configuration Customization - Build_NanoPi_R2S
       env:
         CONFIG_FILE: 'NanoPi_R2S.config'
