--- a/.github/workflows/Build_OP_NanoPi_R2S.yml
+++ b/.github/workflows/Build_OP_NanoPi_R2S.yml
@@ -84,6 +84,11 @@ jobs:
     #  run: |
     #    git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon-jerrykuku
     
+    - name: Change Banner
+      working-directory: ./openwrt
+      run: |
+        cp -f ../banner package/base-files/files/etc/banner
+    
     - name: Import external feeds - adguardhome
       working-directory: ./openwrt
       run: |
@@ -100,10 +105,7 @@ jobs:
         git clone https://github.com/pymumu/smartdns.git package/smartdns
         git clone -b lede https://github.com/pymumu/luci-app-smartdns.git package/luci-app-smartdns
 
-    - name: Change Banner
-      working-directory: ./openwrt
-      run: |
-        cp -f ./banner package/base-files/files/etc/banner
+    
         
     - name: Configuration Customization - Build_NanoPi_R2S
       env:
