--- a/x86_64.config
+++ b/x86_64.config
@@ -15,6 +15,7 @@ CONFIG_PACKAGE_collectd-mod-network=y
 CONFIG_PACKAGE_collectd-mod-rrdtool=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 # CONFIG_PACKAGE_iptables-mod-ipsec is not set
