--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -11,7 +11,7 @@ on:
   release:
     types: [published]
 
-# 1.1
+
   push:
     branches: 
       - master
@@ -75,6 +75,27 @@ jobs:
         ./scripts/feeds install -a
         ./scripts/feeds install -a
 
+    #- name: Import external feeds - passwall
+    #  working-directory: ./openwrt
+    #  run: |
+    #    git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
+    #    git clone "your_github_link" package/"your_folder_name"      
+
+    #- name: Import external feeds - JerryKuKu Argon
+    #  working-directory: ./openwrt
+    #  run: |
+    #    git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon-jerrykuku
+    
+    - name: Change Banner
+      working-directory: ./openwrt
+      run: |
+        cp -f ../banner package/base-files/files/etc/banner
+    
+    - name: Import external feeds - adguardhome
+      working-directory: ./openwrt
+      run: |
+        git clone https://github.com/rufengsuixing/luci-app-adguardhome.git package/luci-app-adguardhome
+        
     - name: Import external feeds - openclash
       working-directory: ./openwrt
       run: |
