--- a/x86_64.config
+++ b/x86_64.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+# CONFIG_GRUB_EFI_IMAGES is not set
 CONFIG_GRUB_IMAGES=y
 CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_UnblockNeteaseMusic-Go is not set
@@ -16,6 +17,8 @@ CONFIG_PACKAGE_collectd-mod-network=y
 CONFIG_PACKAGE_collectd-mod-rrdtool=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_ip6tables-extra=y
+CONFIG_PACKAGE_ip6tables-mod-nat=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
@@ -28,6 +31,7 @@ CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_kmod-crypto-hmac is not set
 # CONFIG_PACKAGE_kmod-crypto-md5 is not set
 CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-ip6tables-extra=y
 # CONFIG_PACKAGE_kmod-ipsec is not set
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
@@ -48,6 +52,8 @@ CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_libltdl=y
+CONFIG_PACKAGE_libnet-1.2.x=y
+CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_librrd1=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
@@ -62,8 +68,8 @@ CONFIG_PACKAGE_luci-app-openclash=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 # CONFIG_PACKAGE_luci-app-samba is not set
-CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
+CONFIG_PACKAGE_luci-app-statistics=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
@@ -73,10 +79,11 @@ CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ntpc-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-statistics-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_mwan3=y
+CONFIG_PACKAGE_netcat=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_ntpclient=y
 CONFIG_PACKAGE_odhcp6c=y
@@ -86,19 +93,23 @@ CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_rrdtool1=y
 CONFIG_PACKAGE_screen=y
-CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_sqm-scripts=y
 # CONFIG_PACKAGE_strongswan is not set
 CONFIG_PACKAGE_tc-mod-iptables=y
 CONFIG_PACKAGE_tc-tiny=y
+CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_tcpping=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_vim-full=y
+CONFIG_PCAP_HAS_NETFILTER=y
+CONFIG_PCAP_HAS_USB=y
 CONFIG_TARGET_EXT4_BLOCKSIZE=4096
 CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
 CONFIG_TARGET_EXT4_RESERVED_PCT=0
 CONFIG_TARGET_ROOTFS_EXT4FS=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
+CONFIG_PACKAGE_grub2-efi=y
 CONFIG_PACKAGE_samba36-server=y
 CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_wsdd2=y
