--- a/.github/workflows/Build_OOP_x86_64.yml
+++ b/.github/workflows/Build_OOP_x86_64.yml
@@ -109,6 +109,7 @@ jobs:
         CONFIG_FILE: 'x86_64_oop.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        chmod +x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig
         
     - name: Download package
