--- a/x86_64_oop.config
+++ b/x86_64_oop.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_BIND_ENABLE_DOH=y
 CONFIG_GRUB_BAUDRATE=38400
 # CONFIG_GRUB_EFI_IMAGES is not set
 CONFIG_HTOP_LMSENSORS=y
@@ -12,6 +13,8 @@ CONFIG_LIBCURL_NGHTTP2=y
 CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBCURL_WOLFSSL=y
+CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
 CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
@@ -28,11 +31,21 @@ CONFIG_PACKAGE_TAR_GZIP=y
 CONFIG_PACKAGE_TAR_XZ=y
 CONFIG_PACKAGE_TAR_ZSTD=y
 CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_bind-check=y
+CONFIG_PACKAGE_bind-ddns-confgen=y
+CONFIG_PACKAGE_bind-dig=y
+CONFIG_PACKAGE_bind-dnssec=y
+CONFIG_PACKAGE_bind-host=y
+CONFIG_PACKAGE_bind-libs=y
+CONFIG_PACKAGE_bind-nslookup=y
+CONFIG_PACKAGE_bind-rndc=y
+CONFIG_PACKAGE_bind-tools=y
 # CONFIG_PACKAGE_bnx2-firmware is not set
 CONFIG_PACKAGE_bzip2=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-dirname=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_ddns-scripts=y
@@ -50,8 +63,15 @@ CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
 CONFIG_PACKAGE_e100-firmware=y
 CONFIG_PACKAGE_etherwake=y
+CONFIG_PACKAGE_file=y
+CONFIG_PACKAGE_findutils=y
+CONFIG_PACKAGE_findutils-find=y
+CONFIG_PACKAGE_findutils-locate=y
+CONFIG_PACKAGE_findutils-xargs=y
+CONFIG_PACKAGE_firewall=m
 CONFIG_PACKAGE_fping=y
 CONFIG_PACKAGE_frpc=y
+CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ip-tiny=y
@@ -113,6 +133,11 @@ CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-net=y
 CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-ohci-pci=y
+CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-ch341=y
+CONFIG_PACKAGE_kmod-usb-serial-cp210x=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 CONFIG_PACKAGE_kmod-usb2=y
@@ -120,6 +145,7 @@ CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_kmod-via-rhine=y
 CONFIG_PACKAGE_kmod-via-velocity=y
 CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
@@ -127,7 +153,9 @@ CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
 CONFIG_PACKAGE_libcap-ng=y
 CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_libdb47=y
 CONFIG_PACKAGE_libelf=y
+CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libgmp=y
 CONFIG_PACKAGE_libip4tc=y
 CONFIG_PACKAGE_libip6tc=y
@@ -141,24 +169,35 @@ CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblzma=y
+CONFIG_PACKAGE_libmagic=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libowipcalc=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libpcre2=y
+CONFIG_PACKAGE_libprotobuf-c=y
 CONFIG_PACKAGE_libreadline=y
+CONFIG_PACKAGE_libredblack=y
 CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libsysrepo=y
+CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
+CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libxtables=y
 CONFIG_PACKAGE_libyaml=y
+CONFIG_PACKAGE_libyang=y
 CONFIG_PACKAGE_libzstd=y
+CONFIG_PACKAGE_lscpu=y
+CONFIG_PACKAGE_lsof=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
@@ -179,6 +218,35 @@ CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-i18n-base-en=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-en=y
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-firewall-en=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-frpc-en=y
+CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3-en=y
+CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-nlbwmon-en=y
+CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ntpc-en=y
+CONFIG_PACKAGE_luci-i18n-ntpc-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-opkg-en=y
+CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-sqm-en=y
+CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ttyd-en=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-en=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-watchcat-en=y
+CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wireguard-en=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wol-en=y
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 CONFIG_PACKAGE_luci-lib-base=y
 CONFIG_PACKAGE_luci-lib-ip=y
 CONFIG_PACKAGE_luci-lib-ipkg=y
@@ -193,13 +261,14 @@ CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
-CONFIG_PACKAGE_mtr-nojson=y
+CONFIG_PACKAGE_mtr-json=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_netcat=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_ntpclient=y
 CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_owipcalc=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
@@ -220,8 +289,12 @@ CONFIG_PACKAGE_screen=y
 CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_socat=y
+CONFIG_PACKAGE_speedtestpp=y
 CONFIG_PACKAGE_sqm-scripts=y
+CONFIG_PACKAGE_sysrepocfg=y
+CONFIG_PACKAGE_sysstat=y
 CONFIG_PACKAGE_tar=y
+CONFIG_PACKAGE_tc-mod-iptables=y
 CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_terminfo=y
@@ -232,17 +305,23 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_unrar=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_vim-full=y
+CONFIG_PACKAGE_vnstat=y
 CONFIG_PACKAGE_watchcat=y
+CONFIG_PACKAGE_wg-installer-client=y
+CONFIG_PACKAGE_wg-installer-server=y
+CONFIG_PACKAGE_whereis=y
+CONFIG_PACKAGE_which=y
+CONFIG_PACKAGE_whois=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_xtables-legacy=y
 CONFIG_PACKAGE_xz=y
 CONFIG_PACKAGE_xz-utils=y
 CONFIG_PACKAGE_zlib=y
+CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_PCRE_JIT_ENABLED=y
 # CONFIG_SIGNATURE_CHECK is not set
 # CONFIG_SIGNED_PACKAGES is not set
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
-# CONFIG_TARGET_ROOTFS_TARGZ is not set
 CONFIG_ZSTD_OPTIMIZE_O3=y
 CONFIG_PACKAGE_grub2-efi=y
 CONFIG_PACKAGE_openwrt-keyring=y
