--- a/.github/workflows/Build_OOP_x86_64.yml
+++ b/.github/workflows/Build_OOP_x86_64.yml
@@ -91,7 +91,10 @@ jobs:
       run: |
         cp -f ../banner package/base-files/files/etc/banner
     
-
+    - name: Import external feeds - ssrp
+      working-directory: ./openwrt
+      run: |
+        git clone --depth=1 https://github.com/fw876/helloworld.git package/helloworld
           
     - name: Import external feeds - adguardhome
       working-directory: ./openwrt
