--- a/.github/workflows/Build_OOP_NanoPi_R2S.yml
+++ b/.github/workflows/Build_OOP_NanoPi_R2S.yml
@@ -1,7 +1,7 @@
 #=================================================
 # Description: Build OpenWrt using GitHub Actions
 # Lisence: MIT
-# Author: eSirPlayground
+# Author: 0x959
 # Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
